k8s/prod/fraud-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud
  labels:
    app: fraud
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fraud
  template:
    metadata:
      labels:
        app: fraud
    spec:
      containers:
        - name: fraud
          image: wesleymime/fraud
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
