k8s/prod/transactions-g-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-generator
  labels:
    app: transactions-generator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: transactions-generator
  template:
    metadata:
      labels:
        app: transactions-generator
    spec:
      containers:
        - name: transactions-generator
          image: wesleymime/generator
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
