k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: fta
spec:
  rules:
    - host: financialtransactionanalyzer.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fta-service
                port:
                  number: 8080
